--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "uvicorn (>=0.35.0,<0.36.0)",
     "fastapi (>=0.116.1,<0.117.0)",
     "logging (>=0.4.9.6,<0.5.0.0)",
-    "pydantic (>=2.11.7,<3.0.0)"
+    "pydantic (>=2.11.7,<3.0.0)",
+    "google-genai (>=1.30.0,<2.0.0)",
+    "pydantic-settings (>=2.10.1,<3.0.0)"
 ]
 
 [build-system]
