--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,14 +6,15 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "uvicorn (>=0.35.0,<0.36.0)",
     "fastapi (>=0.116.1,<0.117.0)",
     "logging (>=0.4.9.6,<0.5.0.0)",
     "pydantic (>=2.11.7,<3.0.0)",
     "google-genai (>=1.30.0,<2.0.0)",
-    "pydantic-settings (>=2.10.1,<3.0.0)"
+    "pydantic-settings (>=2.10.1,<3.0.0)",
+    "slowapi (>=0.1.9,<0.2.0)"
 ]
 
 [build-system]
