add flake8 and black

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,4 +1,4 @@
-.PHONY: install-dev switch-dev dev
+.PHONY: install-dev switch-dev dev lint fix
 
 install-dev:
 	poetry install
@@ -8,3 +8,11 @@ switch-dev:
 
 dev:
 	poetry run uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+
+lint:
+	poetry run flake8 app
+
+fix:
+	poetry run black app
+	make lint
+
