--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,3 +23,5 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.1.1"
+flake8 = "^7.3.0"
+black = "^25.1.0"
