--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "pydantic (>=2.11.7,<3.0.0)",
     "google-genai (>=1.30.0,<2.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
-    "slowapi (>=0.1.9,<0.2.0)"
+    "slowapi (>=0.1.9,<0.2.0)",
+    "sqlalchemy (>=2.0.44,<3.0.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)"
 ]
 
 [build-system]
